2012-12-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use KPSE_BASIC to enable silent rules.

2012-12-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import graphite2-1.2.0.