@@ -1,10 +1,10 @@
 ## libs/graphite2/ac/graphite2.ac: configure.ac fragment for the TeX Live subdirectory libs/graphite2/
 dnl
-dnl Copyright (C) 2012 Peter Breitenlohner <tex-live@tug.org>
+dnl Copyright (C) 2012, 2013 Peter Breitenlohner <tex-live@tug.org>
 dnl You may freely use, modify and/or distribute this file.
 dnl
 ## basic check of system graphite2
 KPSE_TRY_LIB([graphite2],
              [#include <graphite2/Font.h>],
-             [int *nMajor, int *nMinor, int *nBugFix;
+             [int *nMajor, *nMinor, *nBugFix;
 gr_engine_version(nMajor, nMinor, nBugFix);])
