@@ -1,3 +1,11 @@
+2013-01-03  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* Makefile.am (AM_CPPFLAGS): Add -DGRAPHITE2_NSEGCACHE,
+	-DGRAPHITE2_NFILEFACE, and -DGRAPHITE2_NTRACING respectively
+	when building without segment caching, file face, or logging.
+
+	* ac/graphite2.ac [KPSE_TRY_LIB]: Correct a syntax bug.
+
 2012-12-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* configure.ac: Use KPSE_BASIC to enable silent rules.
